--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,7 @@ jobs:
       # 设置npm配置
       - name: Set npm configuration
         run: |
-          npm config set registry https://registry.npmmirror.com
-          npm config set @yuanze:registry https://jihulab.com/api/v4/projects/19983/packages/npm/
-          npm config set -- "//jihulab.com/api/v4/projects/19983/packages/npm/:_authToken" "${{ secrets.CI_JOB_TOKEN }}"
+          npm config set registry https://registry.npmjs.org/
       
       # 安装依赖
       - name: Install Dependencies
@@ -28,7 +26,7 @@ jobs:
         
       # 安装lusun-scripts
       - name: Install lusun-scripts
-        run: npm i -g @yuanze/lusun-scripts
+        run: npm i -g lusun-scripts
         
       # 使用lusun-scripts部署到阿里云OSS
       - name: Deploy to OSS
