--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,20 @@ jobs:
         env:
           ACCESS_KEY_ID: ${{ secrets.ACCESSKEYID }}
           ACCESS_KEY_SECRET: ${{ secrets.ACCESSKEYSECRET }}
+          FEISHU_ID: ${{ secrets.FEISHU_ID }}
+          FEISHU_SERCET: ${{ secrets.FEISHU_SERCET }}
+          
         run: |
           lusun-scripts deploy \
             --accessKeyId $ACCESS_KEY_ID \
             --accessKeySecret $ACCESS_KEY_SECRET \
             --bucket docs-lusun-web \
             --endpoint oss-cn-beijing.aliyuncs.com
-          
+
+        # 发送飞书通知
+      - name: Send Feishu Notification
+        run: |
+          lusun-scripts feishu \
+            --id $FEISHU_ID \
+            --secret $FEISHU_SERCET \
+            '{"msg_type": "text", "content": {"text": "https://docs.lusun.com/tcq/ 发布完成"}}'
