--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,5 +47,6 @@ jobs:
           lusun-scripts deploy \
             --accessKeyId $ACCESS_KEY_ID \
             --accessKeySecret $ACCESS_KEY_SECRET \
+            --directoryPath test \
             --bucket docs-lusun-web \
             --endpoint oss-cn-beijing.aliyuncs.com
