--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "vitepress": "^1.0.2"
+    "medium-zoom": "^1.1.0",
+    "vitepress": "^1.1.0"
   },
   "scripts": {
     "dev": "vitepress dev",
